@@ -126,3 +126,4 @@ CAY-2851 Replace Existing OneToOne From New Object
 CAY-2853 Incorrect deletion of entities from flattened attributes
 CAY-2854 Improve delete prevention detection of flattened attribute row
 CAY-2866 DefaultDataDomainFlushAction breaks on circular relationship update
+CAY-2868 Regression: DefaultDbRowOpSorter shouldn't sort update operations
